add wk4 lecture to website

--- a/Lectures/Week05_ANOVAI_lecture.Rmd
+++ b/Lectures/Week05_ANOVAI_lecture.Rmd
@@ -57,64 +57,71 @@ accent3 <- '#19424C'
 ---
 ## Moving on from $t$-tests
 
-+ $t$-tests allow for the comparison of two means...what if we want to compare more than two?
+MONICA - CHECK THIS...not sure if I currently feel okay about it, because we also need to set up the idea of post-hocs. Maybe compare it to using a shoe to hammer a nail?
 
-+ 
++ $t$-tests allow for the comparison of two means...what if we need to compare more than two?
 
----
-# MONICA EDIT - hypotheses
-
-+ null is that $\mu_1 = \mu_2 =...\mu_n$
-+ at least one $\mu$ is different from the other $\mu$s
-
-Monica - show a plot that shows how if even one group is significantly different, the ANOVA can produce significant results.But on its own it doesn't tell you WHICH group is significantly different.
-
-
----
-## The $t$-test
-
-+ $t$-tests take account of both the mean and the variance of the data to determine whether two means are significantly different from each other. 
-
-+ $t$-tests produce a $t$-statistic that reflects the standardised difference between two mean values
++ 'We can just run more $t$-tests'...
 
 --
 
-+ Generally used to test the difference between two means
++ **NO.**
 
-  + **One-sample $t$-tests** test the difference between a sample mean and a known mean
-  
-  + **Independent-sample $t$-tests** test the difference between two separate sample means
-  
-  + **Paired-samples $t$-tests** test the difference in a single sample at two points in time or across different conditions
-  
 --
 
-+ Because of this, all $t$-tests require:
++ *Type I Errors:* rejecting the null when it is actually true.
+
++ $\alpha$ reflects our Type I error rate, or the probability of rejecting the null given that it is true.
+
+--
+
++ When we run a statistical test, we have a Type I error probability equal to $\alpha$ (usually .05, or 5%). This probability is not across ALL tests, but within each test. 
+
++ When you run multiple tests when a single test would do, you're inflating the risk of making a Type I error.
+
+---
+## ANOVA
+
++ ANOVAs produce an $F$-statistic that reflects the ratio of the variation in the dependent variable explained by our independent variable(s) and the variation explained by other unmeasured factors.
+
++ ANOVAs can be used to compare more than two means. 
+
+  + **One-Way ANOVA** test for differences between 3 or more independent means
+  
+  + **Repeated-Measures ANOVA** test for differences in a single sample at 3 or more timepoints or conditions
+  
+  + **Multiway ANOVA** tests for differences between multiple means across multiple independent variables
+
+--
+
++ Because of this, all ANOVAs require:
 
   + A continuous dependent variable
   
-  + A categorical (binary) independent variable
+  + At least one categorical independent variable with three or more levels
 
 ---
-## The $t$-test
+## ANOVA
 
-+ Running a $t$-test involves:
++ Running an ANOVA involves:
 
-  + Computing $t$
+  + Computing $F$
   
-  + Calculating the probability of obtaining our value of $t$ if the null were true
+  + Calculating the probability of obtaining our value of $F$ if the null were true
 
   + Using this probability to make a decision whether to reject the null hypothesis
   
 ---
-## Calculating $t$
+## Calculating $F$
+
+$$F = \frac{MS_{between}}{MS_{within}}$$
 
 + Although there are 3 types of $t$-tests, they generally involve some form of the following calculation:
 
 $$t = \frac{Observed\ Mean(s) - What\ we\ expect\ if\ null\ is\ true}{Some\ combination\ of\ the\ SE}$$
 
 ---
-## One-sample $t$-test
+## One-Way ANOVA
 
 $$t = \frac{\bar{x}-\mu_0}{SE_\bar{x}}$$
 + Compare a sample mean ( $\bar{x}$ ) and a known mean ( $\mu_0$ )
@@ -191,10 +198,10 @@ $$t = \frac{\bar{d}-\mu_d}{SE_\bar{d}}$$
 .pull-right[
 
 ```{r, echo = F, fig.height=4}
-ggplot(data = data.frame(x = c(-5, 5)), aes(x=x)) +
-  stat_function(fun=dt, geom='line', args=c(df = 2), color = baseColor, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 5), color = accent1, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 15), color = accent2, linewidth=1.5) +
+ggplot(data = data.frame(f = c(0, 5)), aes(x=f)) +
+  stat_function(fun=df, geom='line', args=c(df1 = 2, df2 = 10), color = baseColor, linewidth=1.5) +
+  stat_function(fun=df, geom='line', args=c(df1 = 5, df2 = 10), color = accent1, linewidth=1.5) +
+  stat_function(fun=df, geom='line', args=c(df1 = 5, df2 = 30), color = accent2, linewidth=1.5) +
   xlab('t') +
   theme(axis.text.y = element_blank(),
         axis.title.y = element_blank(),
@@ -254,35 +261,37 @@ count: false
 
 
 ---
-## The $t$ distribution
+## The $F$ distribution
 
 .pull-left[
-+ The $t$-distribution is the null distribution against which our calculated $t$-value is compared. 
++ The $F$-distribution is the null distribution against which our calculated $F$-statistic is compared. 
 
-+ The shape of the $t$-distribution depends on the degrees of freedom ( $df$ ) of our data.
++ Like the $t$ distribution, the shape of the $F$-distribution depends on the degrees of freedom in our data.
 
-+ Consider how the shape of the distribution changes as $df$ increases
++ Values of 0 or 1 are most common in the null distribution, with values farther from than 1 increasingly less likely.
 
-**Test your Understanding:** What does the change in shape suggest?
++ Note that $F$ will never be less than 0. 
 
 ]
 
 .pull-right[
 
 ```{r, echo = F, fig.height=4}
-ggplot(data = data.frame(t = c(-5, 5)), aes(x=t)) +
-  stat_function(fun=dt, geom='line', args=c(df = 2), color = baseColor, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 5), color = accent1, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 15), color = accent2, linewidth=1.5) +
+ggplot(data = data.frame(F = c(0, 5)), aes(x=F)) +
+  stat_function(fun=df, geom='line', args=c(df1 = 2, df2 = 10), color = baseColor, linewidth=1.5) +
+  stat_function(fun=df, geom='line', args=c(df1 = 2, df2 = 100), color = accent1, linewidth=1.5) +
+  stat_function(fun=df, geom='line', args=c(df1 = 5, df2 = 10), color = accent2, linewidth=1.5) +
+  stat_function(fun=df, geom='line', args=c(df1 = 5, df2 = 100), color = accent3, linewidth=1.5) +
   theme(axis.text.y = element_blank(),
         axis.title.y = element_blank(),
         axis.line.y = element_blank(),
         axis.ticks.y = element_blank(),
         axis.text.x = element_text(size = 14),
         axis.title.x = element_text(size = 16, face = 'bold')) +
-  annotate('text', label = 'df = 2', x = 2.25, y = .27, color = baseColor, size = 7) + 
-  annotate('text', label = 'df = 5', x = 2.25, y = .32, color = accent1, size = 7) +
-  annotate('text', label = 'df = 15', x = 2.25, y = .37, color = accent2, size = 7)
+  annotate('text', label = 'df = 2, 10', x = 4, y = .25, color = baseColor, size = 7) + 
+  annotate('text', label = 'df = 2, 100', x = 4, y = .35, color = accent1, size = 7) +
+  annotate('text', label = 'df = 5, 10', x = 4, y = .45, color = accent2, size = 7) +
+  annotate('text', label = 'df = 5, 100', x = 4, y = .55, color = accent3, size = 7)
 ```
 
 ]
@@ -319,7 +328,6 @@ ggplot(data = data.frame(t = c(-5, 5)), aes(x=t)) +
 ]
 
 ---
-count: false
 class: center, inverse, middle
 
 ## Questions?
@@ -343,6 +351,15 @@ class: center, inverse, middle
 7. Interpret results
 
 8. Report
+
+---
+# MONICA EDIT - hypotheses
+
++ null is that $\mu_1 = \mu_2 =...\mu_n$
++ at least one $\mu$ is different from the other $\mu$s
+
+Monica - show a plot that shows how if even one group is significantly different, the ANOVA can produce significant results.But on its own it doesn't tell you WHICH group is significantly different.
+
 
 ---
 ## One-Tailed vs Two-Tailed Tests
